Committing what I have

--- a/public/views/gamebuilder.html
+++ b/public/views/gamebuilder.html
@@ -5,7 +5,7 @@
         <fieldset>
             <div class="control-group">
                 <div class="controls">
-                    <button id="newButton" name="newButton" class="btn btn-success">New Game</button>
+                    <button id="newButton" name="newButton" class="btn btn-success" ng-click="createGame()">New Game</button>
                     <!--<button id="noButton" name="noButton" class="btn btn-info">No</button>-->
                 </div>
             </div>
