--- a/public/views/games.html
+++ b/public/views/games.html
@@ -1,3 +1,6 @@
 <div>
-    <input name="gametitle" ng-model="game.title">
+    Checking if this shows...
+    <ul>
+        <list-item ng-repeat="game in games.data track by $index"></list-item>
+    </ul>
 </div>
